--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <div class="col-10 d-flex d-inline-block">
 
-              <p class="local_adress text-danger"> <span class="fas fa-map-marker-alt local_icons"></span>R Onze de Setembro,322-Centro, Custódia-PE</p>
+              <p class="local_adress text-danger"> <span class="fas fa-map-marker-alt local_icons"></span>R.Onze de Setembro,322-Centro, Custódia-PE</p>
 
               <p class="local_adress text-danger"> <span class="fas fa-map-marker-alt local_icons"></span>AV.Osvaldo Cruz, 3446-S.Miguel, Arcoverde-PE</p>
 
