--- a/sellers.html
+++ b/sellers.html
@@ -190,7 +190,7 @@
 
         <div class="col-12 col-sm-6 col-md-4">
 
-          <img class="img-fluid shadow" src="img/consultores/LUCAS.jpg">
+          <img class="img-fluid shadow" src="img/consultores/JUNIOR.jpg">
           
         </div>
 
