add descrição jr

--- a/sellers.html
+++ b/sellers.html
@@ -196,7 +196,7 @@
 
         <div class="col-12 col-sm-6 col-md-7 mt-3">
 
-          <p>Lucas Nilton consultor de vendas de nossa filial de Custódia - PE atende o sertão do Pajeú e São Francisco além de estados vizinhos.</p>
+          <p>Júnior Souza consultor de vendas do nosso centro de distribuição de Arcoverde - PE atende o sertão do Pajeú, Agreste, Zona da Mata e estados vizinhos.</p>
           
         </div>
 
