footer deamis pages atualizado

--- a/about-us.html
+++ b/about-us.html
@@ -299,11 +299,11 @@
       
     </section> <!--catálogo section-->
 
-     <footer class="footer mt-5">
+      <footer class="footer mt-5">
 
       <div class="row d-flex justify-content-center map-limit">
 
-        <div class="col-4 mt-4 pl-md-5">
+        <div class="col-4 mt-4 pl-5">
            <h4 class="map-tittle">Moxotec Custódia</h4>
 
            <p class="under-address mt-2">R.Onze de Setembro,322-Centro, Custódia-PE.</p>
@@ -322,7 +322,7 @@
 
       <div class="row d-flex justify-content-center map-limit">
 
-        <div class="col-4 pl-md-5">
+        <div class="col-4 pl-5">
            <h4 class="map-tittle">Moxotec Arcoverde</h4>
 
            <p class="under-address mt-2">AV.Osvaldo Cruz, 3446-S.Miguel, Arcoverde-PE.</p>
@@ -341,7 +341,7 @@
 
       <div class="row d-flex justify-content-center map-limit">
 
-        <div class="col-4 pl-md-5">
+        <div class="col-4 pl-5">
            <h4 class="map-tittle">Moxotec Recife</h4>
 
            <p class="under-address mt-2">R. Olívia Menelau,264-Imbiribeira, Recife-PE.</p>
@@ -358,7 +358,7 @@
        
       </div>
 
-      <div class="row d-flex justify-content-center map-limit">
+       <div class="row d-flex justify-content-center map-limit">
 
         <div class="col-4 pl-5">
            <h4 class="map-tittle">Moxotec Campina Grande</h4>
