--- a/product-pages/product_onu.html
+++ b/product-pages/product_onu.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" type="imagex/png" href="../img/ICONE-MOXOTEC.ico">
 
 
-    <title>ONUH HÍBRIDA NEXT FIBER</title>
+    <title>ONU HÍBRIDA NEXT FIBER</title>
  
   </head>
   
