add pages ont3001g, fibra 12fo e onu shoreline

--- a/product-pages/product_onu.html
+++ b/product-pages/product_onu.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" type="imagex/png" href="../img/ICONE-MOXOTEC.ico">
 
 
-    <title>ONU HÍBRIDA NEXT FIBER</title>
+    <title>ONT MAXFIBER 1200G</title>
  
   </head>
   
@@ -217,6 +217,10 @@
 
                 <li class="text-secondary h5 mb-5">
                   WI-FI AC 2.4gHz E 5gHz 1200mbps.
+                </li>
+
+                <li class="text-secondary h5 mb-5">
+                  CHIPSET REALTEK
                 </li>
 
                 <li class="text-danger h5">
