corrigindo erro heroku

--- a/product-pages/product_conectorTclicAPC.html
+++ b/product-pages/product_conectorTclicAPC.html
@@ -178,7 +178,7 @@
 
           <div class="col-12 col-md-5 mt-md-5">
 
-            <img class="img-fluid border border-secondary rounded shadow mb-5" src="../img/produto_page/CONECTOR TIPO T CLIC APC 640X640.png">
+            <img class="img-fluid border border-secondary rounded shadow mb-5" src="../img/produto_page/CONECTOR TIPO T CLIC APC.png">
             
           </div> <!--fim da img do produto-->
 
