corrigindo erro heroku

--- a/product-pages/product_maquinafusaonext.html
+++ b/product-pages/product_maquinafusaonext.html
@@ -216,7 +216,7 @@
                 </li>
 
                 <li class="text-secondary h5 mb-5">
-                  GRANDE CONJUNTO DE ACESSÓRIOS: CLIVADOR, ALICATE, DECAPADOR,PINCEL, ELETRODO DE REPOSIÇÃO E PORTAL ÁLCOOL
+                  CONJUNTO DE ACESSÓRIOS: CLIVADOR, ALICATE, DECAPADOR, PINCEL, ELETRODO DE REPOSIÇÃO E PORTAL ÁLCOOL
                 </li>
 
                 <li class="text-danger h5">
