add pages cabo cftv next e onu 81s

--- a/product-pages/product_onunext81s.html
+++ b/product-pages/product_onunext81s.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" type="imagex/png" href="../img/ICONE-MOXOTEC.ico">
 
 
-    <title>ONT MAXFIBER 1200G</title>
+    <title>ONU NEXT 4381S</title>
  
   </head>
   
@@ -178,7 +178,7 @@
 
           <div class="col-12 col-md-5 mt-md-5">
 
-            <img class="img-fluid border border-secondary rounded shadow mb-5" src="../img/produto_page/ONT MAXPRINT 1200G 600X600.jpg">
+            <img class="img-fluid border border-secondary rounded shadow mb-5" src="../img/produto_page/ONU81S.png">
             
           </div> <!--fim da img do produto-->
 
@@ -186,7 +186,7 @@
 
             <div class="col-12">
 
-              <h3 class="text-danger">ONT MAXFIBER 1200G</h3>
+              <h3 class="text-danger">ONU NEXT 4381S</h3>
               <hr>
               
             </div>
@@ -199,32 +199,20 @@
                   ONU HÍBRIDA G/EPON
                 </li>
 
-                <li class="text-secondary h5 mt-5 mb-5">
-                  TECNOLOGIA PRESET
+                <li class="text-secondary h5 mb-5">
+                  1 PORTA LAN GIGABIT
                 </li>
 
                 <li class="text-secondary h5 mb-5">
-                  SUPORTA BRIDGE E PPOE
+                  PORTA PON UPC(AZUL)
                 </li>
 
                 <li class="text-secondary h5 mb-5">
-                  2 PORTAS LAN GIGABIT
-                </li>
-
-                <li class="text-secondary h5 mb-5">
-                  PORTA PON APC(VERDE)
-                </li>
-
-                <li class="text-secondary h5 mb-5">
-                  WI-FI AC 2.4gHz E 5gHz 1200mbps.
-                </li>
-
-                <li class="text-secondary h5 mb-5">
-                  CHIPSET REALTEK
+                  CHIPSET ZTE
                 </li>
 
                 <li class="text-danger h5">
-                  COD.:7166.
+                  COD.:6942.
                 </li>
 
               </ul>
