removido style de teste

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       </div> <!--Marcas parceiras titles-->
 
 
-      <div class="row slider d-flex justify-content-center catalogo-limit" style="border: 1px solid red">
+      <div class="row slider d-flex justify-content-center catalogo-limit">
 
         <div class="col-2 col-sm-2 col-md-2 partners-logo">
 
