--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
             <div class="carousel-item">
 
-              <img class="img-fluid" src="img/img-carousel/bannerCD.jpg">
+              <img class="img-fluid" src="img/img-carousel/banner.jpg">
               
             </div>
             
