--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
             <div class="carousel-item">
 
-              <img class="img-fluid" src="img/img-carousel/banner.jpg">
+              <img class="img-fluid" src="img/img-carousel/bannerCD.jpg">
               
             </div>
             
@@ -241,7 +241,7 @@
       </div> <!--Marcas parceiras titles-->
 
 
-      <div class="row slider d-flex justify-content-center catalogo-limit">
+      <div class="row slider d-flex justify-content-center partners-limit">
 
         <div class="col-2 col-sm-2 col-md-2 partners-logo">
 
