--- a/index.html
+++ b/index.html
@@ -557,8 +557,8 @@
         slidesToShow: 4,
         slidesToScroll: 1,
         autoplay: true,
-        autoplaySpeed: 2000,
-        centerMode: true,
+        autoplaySpeed: 1700,
+        centerMode: false,
 
         responsive: [
           {
@@ -567,6 +567,7 @@
               slidesToShow: 3,
               slidesToScroll: 1,
               infinite: true,
+              centerMode: false,
               dots: true
             }
           },
@@ -576,6 +577,7 @@
               slidesToShow: 3,
               slidesToScroll: 1,
               infinite: true,
+              centerMode: false,
               dots: true
             }
           },
@@ -585,6 +587,7 @@
               slidesToShow: 2,
               slidesToScroll: 1,
               infinite: true,
+              centerMode: false,
               dots: true
             }
           }
