add pages cto24fo fontejfa e supa

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       </div> <!--Marcas parceiras titles-->
 
 
-      <div class="row slider d-flex justify-content-center partners-limit">
+      <div class="row slider d-flex justify-content-around partners-limit">
 
         <div class="col-2 col-sm-2 col-md-2 partners-logo">
 
@@ -568,7 +568,6 @@
               slidesToScroll: 1,
               infinite: true,
               centerMode: false,
-              dots: true
             }
           },
           {
@@ -578,7 +577,6 @@
               slidesToScroll: 1,
               infinite: true,
               centerMode: false,
-              dots: true
             }
           },
           {
@@ -588,7 +586,6 @@
               slidesToScroll: 1,
               infinite: true,
               centerMode: false,
-              dots: true
             }
           }
           // You can unslick at a given breakpoint now by adding:
