adicionado pagina padrão paga pag de produto e resolvido problema de scroll horizontal com overflow no css

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                           </a>
 
                           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="#">CABOS ÓPTICOS</a>
+                            <a class="dropdown-item" href="categories/padrao.html">CABOS ÓPTICOS</a>
                             <a class="dropdown-item" href="#">CABOS DE REDE</a>
                             <a class="dropdown-item" href="#">ONU'S</a>
                             <a class="dropdown-item" href="#">FERRANGENS</a>
