--- a/product-pages/product_dropmxtec.html
+++ b/product-pages/product_dropmxtec.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" type="imagex/png" href="../img/ICONE-MOXOTEC.ico">
 
 
-    <title>DROP 1FO NEXT FIBER</title>
+    <title>DROP 1FO MXTEC</title>
  
   </head>
   
@@ -178,7 +178,7 @@
 
           <div class="col-12 col-md-5 mt-md-5">
 
-            <img class="img-fluid border border-secondary rounded shadow mb-5" src="../img/produto_page/DROP FLAT NEXT 600X600.jpg">
+            <img class="img-fluid border border-secondary rounded shadow mb-5" src="../img/produto_page/DROP FLAT MXTEC 600X600.jpg">
             
           </div> <!--fim da img do produto-->
 
@@ -216,7 +216,7 @@
                 </li>
 
                 <li class="text-danger h5">
-                  COD.:6320.
+                  COD.:7238.
                 </li>
 
               </ul>
