atualizada pagina do produto cabo cftv mxtec

--- a/product-pages/product_cabocftvmxtec.html
+++ b/product-pages/product_cabocftvmxtec.html
@@ -216,7 +216,7 @@
                 </li>
 
                 <li class="text-secondary h5 mb-5">
-                  CAIXA FEXADA COM 305M
+                  CAIXA FECHADA COM 305M
                 </li>
 
                 <li class="text-danger h5">
