atualizado endereço das lojas

--- a/stores.html
+++ b/stores.html
@@ -51,7 +51,7 @@
                 <a href="stores.html">ARCOVERDE-PE</a></p>
 
               <p class="local_adress text-danger"> <span class="fas fa-map-marker-alt local_icons"></span>
-                <a href="stores.html">CUSTÓDIA-PE</a></p>
+                <a href="stores.html">CUSTODIA-PE</a></p>
 
               <p class="local_adress text-danger"> <span class="fas fa-map-marker-alt local_icons"></span>
                 <a href="stores.html">CAMPINA GRANDE-PB</a></p>
